*** WooCommerce Shipping & Tax Changelog ***

= 1.25.5 - 202x-xx-xx =
* Fix	- Redux DevTools usage update.
* Add	- Display subscriptions usage.
* Add	- Subscription activation.

= 1.25.4 - 2020-12-08 =
* Tweak - Remove Stripe connect functionality.
* Tweak - Remove unused method in shipping settings view.
* Fix	- Breaking behavior on account registration page.
* Add	- Allows registration of additional accounts.
* Tweak - Carrier description on dynamic carrier registration form.
* Fix   - Adjust documentation links.

= 1.25.3 - 2020-11-24 =
* Add   - Initial code for WooCommerce.com subscriptions API.
* Add   - Dynamic carrier registration form.
* Fix   - When adding "signature required" to some packages, prices were not updating.
* Add   - DHL Schedule Pickup link within order notes.
* Fix   - UI fix for input validation for package dimensions and weights.
* Fix   - Correct validation for UPS fields in Carrier Account connect form.
* Tweak - Add message to explain automated tax requires tax-exclusive product pricing.
* Fix   - Disable USPS refunds for untracked labels only.

= 1.25.2 - 2020-11-10 =
* Tweak - Add ZIP code validation to UPS(beta) signup form.
* Fix   - Issue with printing labels in some iOS devices through Safari.
* Fix   - Prevents warning when using PHP 5.5 or lesser
* Add   - Add new API end point to retrieve carrier registration requirements.
* Add   - Add composer command to run PHPUnit.
* Tweak - Update readme with DHL information.

= 1.25.1 - 2020-10-28 =
* Tweak - DHL refund days copy adjustment
* Tweak - Stop using deprecated Jetpack method is_development_mode().
* Fix   - Update carrier name in tracking notification email.
* Add   - Add pre-commit and pre-push git hooks for linting and unit tests.
* Add   - Disable refunds for USPS letters.

= 1.25.0 - 2020-10-13 =
* Fix   - UPS connect redirect prompt
* Fix   - Allow UPS label purchase without payment method
* Fix   - PHP implode arguments order