@@ -80,6 +80,9 @@ const CarrierAccountListItem = ( props ) => {
 
 	const carrierTypeIconMap = {
 		DhlExpressAccount: 'dhlexpress',
+		DhlEcommerceAccount: 'dhlecommerce',
+		DhlEcommerceAsiaAccount: 'dhlecommerceasia',
+		DHLGMIAccount: 'dhlecommerceinternational',
 		UpsAccount: 'ups',
 	}
 
