@@ -4,6 +4,7 @@
 * Fix	- Redux DevTools usage update.
 * Add	- Display subscriptions usage.
 * Add	- Subscription activation.
+* Add 	- Uses same DHL logo for all registered DHL accounts.
 
 = 1.25.4 - 2020-12-08 =
 * Tweak - Remove Stripe connect functionality.
